--- a/templates/components/_nav.html
+++ b/templates/components/_nav.html
@@ -15,7 +15,7 @@
                 <li class="header__menuItem"><a href="projects.html">Projects</a></li>
                 {% if request.user.is_authenticated %}
                 <li class="header__menuItem"><a href="inbox.html">Inbox</a></li>
-                <li class="header__menuItem"><a href="account.html">My Account</a></li>
+                <li class="header__menuItem"><a href="{% url 'account' %}">Account</a></li>
                 <li class="header__menuItem"><a href="{% url 'logout' %}" class="btn btn--sub">Logout</a></li>
                 {% else %}
                 <li class="header__menuItem"><a href="{% url 'login' %}" class="btn btn--sub">Login/Sign Up</a></li>
