skill delete, update functionality configuring

--- a/app_users/templates/app_users/account.html
+++ b/app_users/templates/app_users/account.html
@@ -108,12 +108,12 @@
                 </div>
                 <div class="settings">
                     <h3 class="settings__title">Skills</h3>
-                    <a class="tag tag--pill tag--sub settings__btn tag--lg" href="#"><i class="im im-plus"></i> Add
+                    <a class="tag tag--pill tag--sub settings__btn tag--lg" href="{% url 'create_skill' %}"><i class="im im-plus"></i> Add
                         Skill</a>
                 </div>
 
                 <table class="settings__table">
-                    {% for skil in profile.skill_set.all %}
+                    {% for skill in profile.skill_set.all %}
                     <tr>
                         <td class="settings__tableInfo">
                             <h4>{{ skill.name }}</h4>
@@ -122,9 +122,9 @@
                             </p>
                         </td>
                         <td class="settings__tableActions">
-                            <a class="tag tag--pill tag--main settings__btn" href="#"><i class="im im-edit"></i>
+                            <a class="tag tag--pill tag--main settings__btn" href="{% url 'update_skill' pk=skill.id %}"><i class="im im-edit"></i>
                                 Edit</a>
-                            <a class="tag tag--pill tag--main settings__btn" href="#"><i
+                            <a class="tag tag--pill tag--main settings__btn" href="{% url 'delete_skill' pk=skill.id %}"><i
                                     class="im im-x-mark-circle-o"></i>
                                 Delete</a>
                         </td>
