--- a/app_users/templates/app_users/account.html
+++ b/app_users/templates/app_users/account.html
@@ -12,8 +12,7 @@
                             <i class="bi bi-pencil-square"></i>
                             Edit
                         </a>
-                        <img class="avatar avatar--xl dev__avatar"
-                             src="{{ profile.photo.url }}"/>
+                        <img class="avatar avatar--xl dev__avatar" src="{{ profile.photo.url }}" />
                         <h2 class="dev__name">
                             {% if profile.fullname %}
                             {{ user.profile.fullname }}
@@ -28,7 +27,7 @@
                         <ul class="dev__social">
                             {% if profile.social_github %}
                             <li>
-                                <a title="Github" href="#" target="_blank">
+                                <a title="Github" href="{{ profile.social_github }}" target="_blank">
                                     <i class="bi bi-github"></i>
                                 </a>
                             </li>
@@ -37,9 +36,10 @@
                             <li>
                                 <a title="Stackoverflow" href="{{ profile.social_stackoverflow }}" target="_blank">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                         class="bi bi-stack-overflow" viewBox="0 0 16 16">
-                                        <path d="M12.412 14.572V10.29h1.428V16H1v-5.71h1.428v4.282h9.984z"/>
-                                        <path d="M3.857 13.145h7.137v-1.428H3.857v1.428zM10.254 0 9.108.852l4.26 5.727 1.146-.852L10.254 0zm-3.54 3.377 5.484 4.567.913-1.097L7.627 2.28l-.914 1.097zM4.922 6.55l6.47 3.013.603-1.294-6.47-3.013-.603 1.294zm-.925 3.344 6.985 1.469.294-1.398-6.985-1.468-.294 1.397z"/>
+                                        class="bi bi-stack-overflow" viewBox="0 0 16 16">
+                                        <path d="M12.412 14.572V10.29h1.428V16H1v-5.71h1.428v4.282h9.984z" />
+                                        <path
+                                            d="M3.857 13.145h7.137v-1.428H3.857v1.428zM10.254 0 9.108.852l4.26 5.727 1.146-.852L10.254 0zm-3.54 3.377 5.484 4.567.913-1.097L7.627 2.28l-.914 1.097zM4.922 6.55l6.47 3.013.603-1.294-6.47-3.013-.603 1.294zm-.925 3.344 6.985 1.469.294-1.398-6.985-1.468-.294 1.397z" />
                                     </svg>
                                 </a>
                             </li>
@@ -126,11 +126,11 @@
                         </td>
                         <td class="settings__tableActions">
                             <a class="tag tag--pill tag--main settings__btn"
-                               href="{% url 'update_skill' pk=skill.id %}">
+                                href="{% url 'update_skill' pk=skill.id %}">
                                 <i class="bi bi-pencil-square"></i>
                                 Edit</a>
                             <a class="tag tag--pill tag--main settings__btn"
-                               href="{% url 'delete_skill' pk=skill.id %}">
+                                href="{% url 'delete_skill' pk=skill.id %}">
                                 <i class="bi bi-trash-fill"></i>
                                 Delete</a>
                         </td>
@@ -151,7 +151,8 @@
                     {% for project in profile.project_set.all %}
                     <tr>
                         <td class="settings__thumbnail">
-                            <a href="{% url 'project_detail' project.id %}"><img src="{{ project.photo.url }}" alt="{{ project.name }}"/></a>
+                            <a href="{% url 'project_detail' project.id %}"><img src="{{ project.photo.url }}"
+                                    alt="{{ project.name }}" /></a>
                         </td>
                         <td class="settings__tableInfo">
                             <a href="{% url 'project_detail' project.id %}">{{ project.name }}</a>
@@ -160,10 +161,12 @@
                             </p>
                         </td>
                         <td class="settings__tableActions">
-                            <a class="tag tag--pill tag--main settings__btn" href="{% url 'project_update' project.id %}">
+                            <a class="tag tag--pill tag--main settings__btn"
+                                href="{% url 'project_update' project.id %}">
                                 <i class="bi bi-pencil-square"></i>
                                 Edit</a>
-                            <a class="tag tag--pill tag--main settings__btn" href="{% url 'project_delete' project.id %}">
+                            <a class="tag tag--pill tag--main settings__btn"
+                                href="{% url 'project_delete' project.id %}">
                                 <i class="bi bi-trash-fill"></i>
                                 Delete</a>
                         </td>
