--- a/app_users/templates/app_users/login.html
+++ b/app_users/templates/app_users/login.html
@@ -24,6 +24,7 @@
                         name="username"
                         placeholder="Enter your username..."
                         autocomplete="off"
+                        autofocus
                 />
             </div>
 
@@ -37,6 +38,7 @@
                         name="password"
                         placeholder="••••••••"
                         autocomplete="off"
+                        autofocus
                 />
             </div>
             <div class="auth__actions">
