project project.html and projects.html configure

--- a/app_users/templates/app_users/account.html
+++ b/app_users/templates/app_users/account.html
@@ -15,7 +15,7 @@
                         <img class="avatar avatar--xl dev__avatar" src="{{ profile.photo.url }}" />
                         <h2 class="dev__name">
                             {% if profile.fullname %}
-                            {{ user.profile.fullname }}
+                            {{ profile.fullname }}
                             {% else %}
                             {{ profile.user.username }}
                             {% endif %}</h2>
