--- a/app_users/templates/app_users/profile_detail.html
+++ b/app_users/templates/app_users/profile_detail.html
@@ -8,7 +8,7 @@
             <div class="column column--1of3">
                 <div class="card text-center">
                     <div class="card__body dev">
-                        <img class="avatar avatar--xl" src="{{ profile.photo.url }}"/>
+                        <img class="avatar avatar--xl" src="{{ profile.photo.url }}" />
                         <h2 class="dev__name">
                             {% if profile.fullname %}
                             {{ user.profile.fullname }}
@@ -32,9 +32,10 @@
                             <li>
                                 <a title="Stackoverflow" href="{{ profile.social_stackoverflow }}" target="_blank">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                         class="bi bi-stack-overflow" viewBox="0 0 16 16">
-                                        <path d="M12.412 14.572V10.29h1.428V16H1v-5.71h1.428v4.282h9.984z"/>
-                                        <path d="M3.857 13.145h7.137v-1.428H3.857v1.428zM10.254 0 9.108.852l4.26 5.727 1.146-.852L10.254 0zm-3.54 3.377 5.484 4.567.913-1.097L7.627 2.28l-.914 1.097zM4.922 6.55l6.47 3.013.603-1.294-6.47-3.013-.603 1.294zm-.925 3.344 6.985 1.469.294-1.398-6.985-1.468-.294 1.397z"/>
+                                        class="bi bi-stack-overflow" viewBox="0 0 16 16">
+                                        <path d="M12.412 14.572V10.29h1.428V16H1v-5.71h1.428v4.282h9.984z" />
+                                        <path
+                                            d="M3.857 13.145h7.137v-1.428H3.857v1.428zM10.254 0 9.108.852l4.26 5.727 1.146-.852L10.254 0zm-3.54 3.377 5.484 4.567.913-1.097L7.627 2.28l-.914 1.097zM4.922 6.55l6.47 3.013.603-1.294-6.47-3.013-.603 1.294zm-.925 3.344 6.985 1.469.294-1.398-6.985-1.468-.294 1.397z" />
                                     </svg>
                                 </a>
                             </li>
@@ -89,13 +90,16 @@
                             </li>
                             {% endif %}
                         </ul>
-                        <a href="" class="btn btn--sub btn--lg">
+                        {% if request.user.id != profile.user.id %}
+                        <a href="{% url 'send_message' profile.id %}" class="btn btn--sub btn--lg">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                 class="bi bi-send-fill" viewBox="0 0 16 16">
-                                <path d="M15.964.686a.5.5 0 0 0-.65-.65L.767 5.855H.766l-.452.18a.5.5 0 0 0-.082.887l.41.26.001.002 4.995 3.178 3.178 4.995.002.002.26.41a.5.5 0 0 0 .886-.083l6-15Zm-1.833 1.89L6.637 10.07l-.215-.338a.5.5 0 0 0-.154-.154l-.338-.215 7.494-7.494 1.178-.471-.47 1.178Z"/>
+                                class="bi bi-send-fill" viewBox="0 0 16 16">
+                                <path
+                                    d="M15.964.686a.5.5 0 0 0-.65-.65L.767 5.855H.766l-.452.18a.5.5 0 0 0-.082.887l.41.26.001.002 4.995 3.178 3.178 4.995.002.002.26.41a.5.5 0 0 0 .886-.083l6-15Zm-1.833 1.89L6.637 10.07l-.215-.338a.5.5 0 0 0-.154-.154l-.338-.215 7.494-7.494 1.178-.471-.47 1.178Z" />
                             </svg>
                             Send Message
                         </a>
+                        {% endif %}
                     </div>
                 </div>
             </div>
@@ -125,7 +129,7 @@
                         <div class="devInfo__otherSkills">
                             {% for skill in other_skills %}
                             <span class="tag tag--pill tag--sub tag--lg">
-                                  <small>{{ skill.name|capfirst }}</small>
+                                <small>{{ skill.name|capfirst }}</small>
                             </span>
                             {% endfor %}
                         </div>
@@ -140,11 +144,11 @@
                             <div class="card project">
                                 <a href="{% url 'project_detail' project.id %}" class="project" style="width: 100%;">
                                     <img class="project__thumbnail" src="{{ project.photo.url }}"
-                                         alt="{{ project.name }}"/>
+                                        alt="{{ project.name }}" />
                                     <div class="card__body">
                                         <h3 class="project__title">{{ project.name }}</h3>
                                         <p><a class="project__author" href="{% url 'profile' project.owner.id %}">By
-                                            {{ project.owner.fullname }}</a></p>
+                                                {{ project.owner.fullname }}</a></p>
                                         <p class="project--rating">
                                             <span style="font-weight: bold;">92%</span> Postitive
                                             Feedback (62 Votes)
@@ -152,7 +156,7 @@
                                         <div class="project__tags">
                                             {% for tag in project.tags.all %}
                                             <span class="tag tag--pill tag--main">
-                                              <small>{{ tag.name|capfirst }}</small>
+                                                <small>{{ tag.name|capfirst }}</small>
                                             </span>
                                             {% endfor %}
                                         </div>
