--- a/app_main/templates/app_main/projects.html
+++ b/app_main/templates/app_main/projects.html
@@ -39,8 +39,8 @@
                                     </a>
                                 </p>
                                 <p class="project--rating">
-                                    <span style="font-weight: bold;">92%</span> Postitive
-                                    Feedback (62 Votes)
+<!--                                    <span style="font-weight: bold;">92%</span> Postitive-->
+<!--                                    Feedback (62 Votes)-->
                                 </p>
                                 <div class="project__tags">
                                     {% for tag in project.tags.all %}
