--- a/app_users/templates/app_users/profile_detail.html
+++ b/app_users/templates/app_users/profile_detail.html
@@ -150,8 +150,8 @@
                                         <p><a class="project__author" href="{% url 'profile' project.owner.id %}">By
                                                 {{ project.owner.fullname }}</a></p>
                                         <p class="project--rating">
-                                            <span style="font-weight: bold;">92%</span> Postitive
-                                            Feedback (62 Votes)
+<!--                                              <span style="font-weight: bold;">92%</span> Postitive-->
+<!--                                            Feedback (62 Votes)-->
                                         </p>
                                         <div class="project__tags">
                                             {% for tag in project.tags.all %}
