--- a/app_main/templates/app_main/projects.html
+++ b/app_main/templates/app_main/projects.html
@@ -10,11 +10,11 @@
             </div>
 
             <div class="hero-section__search">
-                <form class="form" action="#" method="get">
+                <form class="form" action="" method="get">
                     <div class="form__field">
                         <label for="formInput#search">Search By Projects </label>
-                        <input class="input input--text" id="formInput#search" type="text" name="text"
-                            placeholder="Search by Project Title" />
+                        <input class="input input--text" id="formInput#search" type="text" name="query"
+                            placeholder="Search by Project Title" value="{{ query }}" />
                     </div>
 
                     <input class="btn btn--sub btn--lg" type="submit" value="Search" />
@@ -53,6 +53,8 @@
                         </a>
                     </div>
                 </div>
+                {% empty %}
+                <small style="display: block; width:100%; text-align: center;">There is no any project by your request "{{ query }}"</small>
                 {% endfor %}
             </div>
         </div>
