add pagination for developers.html and projects.html

--- a/app_main/templates/app_main/projects.html
+++ b/app_main/templates/app_main/projects.html
@@ -60,22 +60,7 @@
         </div>
     </section>
 
-    <div class="pagination">
-        <ul class="container">
-            <li><a href="#" class="btn btn--disabled">&#10094; Prev</a></li>
-            <li><a href="#" class="btn btn--sub">01</a></li>
-            <li><a href="#" class="btn">02</a></li>
-            <li><a href="#" class="btn">03</a></li>
-            <li><a href="#" class="btn">04</a></li>
-            <li><a href="#" class="btn">05</a></li>
-            <li><a href="#" class="btn">06</a></li>
-            <li><a href="#" class="btn">07</a></li>
-            <li><a href="#" class="btn">08</a></li>
-            <li><a href="#" class="btn">09</a></li>
-            <li><a href="#" class="btn">10</a></li>
-            <li><a href="#" class="btn">Next &#10095;</a></li>
-        </ul>
-    </div>
+    {% include 'components/_pagination.html' with queryset=projects custom_range=custom_range %}
 </main>
 
 {% endblock content %}
