--- a/app_users/templates/app_users/profile_detail.html
+++ b/app_users/templates/app_users/profile_detail.html
@@ -11,7 +11,7 @@
                         <img class="avatar avatar--xl" src="{{ profile.photo.url }}" />
                         <h2 class="dev__name">
                             {% if profile.fullname %}
-                            {{ user.profile.fullname }}
+                            {{ profile.fullname }}
                             {% else %}
                             {{ profile.user.username }}
                             {% endif %}</h2>
