--- a/app_users/templates/app_users/login.html
+++ b/app_users/templates/app_users/login.html
@@ -43,7 +43,7 @@
             </div>
             <div class="auth__actions">
                 <input class="btn btn--sub btn--lg" type="submit" value="Log In"/>
-                <a href="forgetpassword.html">Forget Password?</a>
+                <a href="{% url 'password_reset' %}">Forget Password?</a>
             </div>
         </form>
         <div class="auth__alternative">
