--- a/templates/components/_pagination.html
+++ b/templates/components/_pagination.html
@@ -1,16 +1,29 @@
+{% if queryset.has_other_pages %}
 <div class="pagination">
     <ul class="container">
-        <li><a href="#" class="btn btn--disabled">&#10094; Prev</a></li>
-        <li><a href="#" class="btn btn--sub">01</a></li>
-        <li><a href="#" class="btn">02</a></li>
-        <li><a href="#" class="btn">03</a></li>
-        <li><a href="#" class="btn">04</a></li>
-        <li><a href="#" class="btn">05</a></li>
-        <li><a href="#" class="btn">06</a></li>
-        <li><a href="#" class="btn">07</a></li>
-        <li><a href="#" class="btn">08</a></li>
-        <li><a href="#" class="btn">09</a></li>
-        <li><a href="#" class="btn">10</a></li>
-        <li><a href="#" class="btn">Next &#10095;</a></li>
+        <li>
+            {% if queryset.has_previous %}
+            <a href="?page={{ queryset.previous_page_number }}" class="btn">&#10094; Prev</a>
+            {% else %}
+            <a href="#" class="btn btn--disabled">&#10094; Prev</a>
+            {% endif %}
+        </li>
+        <!-- <li><a href="#" class="btn btn--sub">01</a></li> -->
+        {% for page in custom_range %}
+        <li>
+            <a href="?page={{ page }}"
+               class="btn {% if page == queryset.number %} btn--sub {% endif %}">
+                {{ page }}
+            </a>
+        </li>
+        {% endfor %}
+        <li>
+            {% if queryset.has_next %}
+            <a href="?page={{ queryset.next_page_number }}" class="btn">Next &#10095;</a>
+            {% else %}
+            <a href="#" class="btn btn--disabled">Next &#10095;</a>
+            {% endif %}
+        </li>
     </ul>
 </div>
+{% endif %}
