one little bug fix on profile.html related with social github link

--- a/app_users/templates/app_users/profile_detail.html
+++ b/app_users/templates/app_users/profile_detail.html
@@ -23,7 +23,7 @@
                         <ul class="dev__social">
                             {% if profile.social_github %}
                             <li>
-                                <a title="Github" href="#" target="_blank">
+                                <a title="Github" href="{{ profile.social_github }}" target="_blank">
                                     <i class="bi bi-github"></i>
                                 </a>
                             </li>
